# ugc-polls

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/: manage.py
src/config/: settings.py  urls.py
src/surveys/: models.py  serializers.py  urls.py  views.py
src/surveys/management/commands/: seed_data.py
src/surveys/migrations/: 0001_initial.py
